# rust-cli-demo

./: Cargo.toml  README.md
src/: main.rs
