[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool written in Rust"

# 需要添加
email = "chaofei_liang@126.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liangchaofei/rust-cli-demo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"

